--- a/EjercicioReactPHP/public/index.html
+++ b/EjercicioReactPHP/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8">
+  <title>Página de Inicio</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Bienvenido a nuestro sitio web</h1>
-    <p>¡Visítanos en nuestra página de contacto!</p>
-    <a href="/contact">Ir a Contacto</a>
+  <h1>Bienvenido a la Página de Inicio</h1>
+  <nav>
+    <ul>
+      <li><a href="/">Inicio</a></li>
+      <li><a href="/contacto">Contacto</a></li>
+      <li><a href="/data">Datos</a></li>
+      <li><a href="/crud">CRUD</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
