--- a/EjercicioReactPHP/public/index.html
+++ b/EjercicioReactPHP/public/index.html
@@ -4,16 +4,29 @@
   <meta charset="UTF-8">
   <title>Página de Inicio</title>
   <link rel="stylesheet" href="/style.css">
+
+
 </head>
 <body>
-  <h1>Bienvenido a la Página de Inicio</h1>
-  <nav>
-    <ul>
-      <li><a href="/">Inicio</a></li>
-      <li><a href="/contacto">Contacto</a></li>
-      <li><a href="/data">Datos</a></li>
-      <li><a href="/crud">CRUD</a></li>
-    </ul>
-  </nav>
+  <header>
+    <h1>Bienvenidos a Tecnología S.A.</h1>
+    <br><br><br>
+    <nav>
+      <ul>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/data">Gestión de Productos</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="contenedor-principal">
+    <h2>Bienvenido a nuestra plataforma</h2>
+    <p>En <strong>Tecnología S.A.</strong> nos especializamos en ofrecer productos tecnológicos de calidad. <br>¡Descubre nuestro catálogo y adquiere lo último en innovación!</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Tecnología S.A. | Todos los derechos reservados</p>
+  </footer>
 </body>
 </html>
