--- a/EjercicioReactPHP/public/contacto.html
+++ b/EjercicioReactPHP/public/contacto.html
@@ -2,42 +2,62 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Formulario de Contacto</title>
+  <title>Contacto</title>
   <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
-  <h1>Contáctanos</h1>
-  <form id="formContacto">
-    <input type="text" name="nombre" placeholder="Tu nombre" required><br>
-    <input type="email" name="email" placeholder="Tu correo" required><br>
-    <textarea name="mensaje" placeholder="Tu mensaje" required></textarea><br>
-    <button type="submit">Enviar</button>
-  </form>
-  <p id="mensajeEstado"></p>
+  <header>
+    <h1>Contacto</h1>
+    <br>
+    <br>
+    <nav>
+      <ul>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/data">Gestión de Productos</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <br>
+    <br>
+    <br>
+    <form id="formContacto">
+      <h2>Formulario de Contacto</h2>
+      <input type="text" id="nombreContacto" placeholder="Tu nombre" required>
+      <input type="email" id="emailContacto" placeholder="Tu correo electrónico" required>
+      <textarea id="mensajeContacto" placeholder="Tu mensaje" required></textarea>
+      <button type="submit">Enviar Mensaje</button>
+    </form>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Tecnología S.A. | Todos los derechos reservados</p>
+  </footer>
 
   <script>
-    document.getElementById('formContacto').addEventListener('submit', function(e) {
+    document.getElementById('formContacto').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const form = e.target;
-      const data = {
-        nombre: form.nombre.value,
-        email: form.email.value,
-        mensaje: form.mensaje.value
-      };
+      const nombre = document.getElementById('nombreContacto').value;
+      const email = document.getElementById('emailContacto').value;
+      const mensaje = document.getElementById('mensajeContacto').value;
 
-      fetch('/contacto', {
+      const contacto = { nombre, email, mensaje };
+
+      const res = await fetch('/contacto', {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      })
-      .then(res => res.json())
-      .then(res => {
-        document.getElementById('mensajeEstado').textContent = 'Mensaje enviado correctamente.';
-        form.reset();
-      })
-      .catch(err => {
-        document.getElementById('mensajeEstado').textContent = 'Error al enviar mensaje.';
+        body: JSON.stringify(contacto),
+        headers: { 'Content-Type': 'application/json' }
       });
+
+      if (res.ok) {
+        alert('Mensaje enviado con éxito');
+        document.getElementById('formContacto').reset();
+      } else {
+        alert('Hubo un error al enviar el mensaje');
+      }
     });
   </script>
 </body>
