--- a/EjercicioReactPHP/public/data.html
+++ b/EjercicioReactPHP/public/data.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Gestión de Productos</h1>
+        <br><br><br>
         <nav>
             <ul>
                 <li><a href="/">Inicio</a></li>
@@ -17,26 +18,29 @@
             </ul>
         </nav>
     </header>
-
+<br><br><br>
     <main>
         <section class="formulario">
-            <form action="/agregar_producto" method="POST">
-                <h2>Agregar Producto</h2>
-                <label for="nombre">Nombre:</label>
-                <input type="text" name="nombre" id="nombre" required>
+           <!-- public/agregar_producto.html -->
+<form method="POST" action="/agregar_producto">
+    <label for="nombre">Nombre:</label>
+    <input type="text" name="nombre" id="nombre" required><br>
 
-                <label for="descripcion">Descripción:</label>
-                <input type="text" name="descripcion" id="descripcion" required>
+    <label for="descripcion">Descripción:</label>
+    <textarea name="descripcion" id="descripcion" required></textarea><br>
 
-                <label for="precio">Precio:</label>
-                <input type="number" name="precio" id="precio" step="0.01" required>
+    <label for="precio">Precio:</label>
+    <input type="number" name="precio" id="precio" required><br>
 
-                <label for="categoria">Categoría:</label>
-                <input type="text" name="categoria" id="categoria" required>
+    <label for="categoria">Categoría:</label>
+    <input type="text" name="categoria" id="categoria" required><br>
 
-                <button type="submit">Agregar Producto</button>
-            </form>
+    <button type="submit">Agregar Producto</button>
+</form>
+
         </section>
+
+        <br><br><br>
 
         <section class="tabla-productos">
             <h2>Productos Disponibles</h2>
@@ -52,6 +56,18 @@
                 </thead>
                 <tbody>
                     {{productos}}
+                    <!-- Ejemplo para contexto:
+                    <tr>
+                        <td>Pizza</td>
+                        <td>Con extra queso</td>
+                        <td>$9.99</td>
+                        <td>Comida</td>
+                        <td>
+                            <button class="boton-accion">Editar</button>
+                            <button class="boton-accion">Eliminar</button>
+                        </td>
+                    </tr>
+                    -->
                 </tbody>
             </table>
         </section>
